Softbody on Text #52344

Closed
opened 2017-08-11 00:02:24 +02:00 by Lukas Wieg · 7 comments

System Information
Operating system and graphics card

Blender Version
Broken: 2.78
Worked: (optional)

Short description of error
Via the modifier drop down menu i can add a softbody modyfier to a text object, but in the physics tab are no settings for softbody and i can't delete the modifier from the modifier rack. The softbody sim seems to work but i can't change settings or delete this modifier anymore.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

**System Information** Operating system and graphics card **Blender Version** Broken: 2.78 Worked: (optional) **Short description of error** Via the modifier drop down menu i can add a softbody modyfier to a text object, but in the physics tab are no settings for softbody and i can't delete the modifier from the modifier rack. The softbody sim seems to work but i can't change settings or delete this modifier anymore. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @LukasWieg

Added subscriber: @LukasWieg

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2017-08-11 10:23:25 +02:00

Weird… looks like this is very old glitch, sure softbody could accept curves, but that'd need much more work than just enabling them for the place-holder modifier!

Weird… looks like this is very old glitch, sure softbody could accept curves, but that'd need much more work than just enabling them for the place-holder modifier!

This issue was referenced by d5d626df23

This issue was referenced by d5d626df236b17c2d4ac731b2aaace52a2611304

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 31be0a6e52

This issue was referenced by 31be0a6e52e1070c50d413432210a3217249f5af
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52344
No description provided.