source/blender/modifiers/intern/MOD_softbody.c
@@ -100,8 +100,7 @@ ModifierTypeInfo modifierType_Softbody = {
 	/* structName */        "SoftbodyModifierData",
 	/* structSize */        sizeof(SoftbodyModifierData),
 	/* type */              eModifierTypeType_OnlyDeform,
-	/* flags */             eModifierTypeFlag_AcceptsCVs |
-	                        eModifierTypeFlag_AcceptsLattice |
+	/* flags */             eModifierTypeFlag_AcceptsLattice |
 	                        eModifierTypeFlag_RequiresOriginalData |
 	                        eModifierTypeFlag_Single,
 
